--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -38,3 +38,30 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 760px) {
+  .nav-items {
+    flex-direction: column;
+  }
+
+  .logo-div {
+    position: relative;
+    padding: 0 !important;
+  }
+
+  .primary-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 0px;
+  }
+
+  .primary-nav div {
+    font-size: 3rem;
+  }
+
+  .main {
+    padding-top: 30vh;
+    padding-bottom: 15px;
+  }
+}
